--- a/index-dev.html
+++ b/index-dev.html
@@ -417,23 +417,23 @@
         </div>
 
         <div id="comments-tab" class="tab-content">
-            <p>Share feedback, tips, tweaks or widgets here. Edit comments <a href="https://github.com/rcorex/nuttyb-config/discussions/2" target="_blank" rel="noopener noreferrer">here.</a></p>
-            <script src="https://giscus.app/client.js"
-                    data-repo="rcorex/nuttyb-config"
-                    data-repo-id="R_kgDOPJlKyQ"
-                    data-category="General"
-                    data-category-id="DIC_kwDOPJlKyc4CtRUV"
-                    data-mapping="pathname"
-                    data-strict="0"
-                    data-reactions-enabled="0"
-                    data-emit-metadata="0"
-                    data-input-position="bottom"
-                    data-theme="dark"
-                    data-lang="en"
-                    data-loading="lazy"
-                    crossorigin="anonymous"
-                    async>
-            </script>
+            <p>Share feedback, tips, tweaks or widgets here. Edit comments by clicking on the timestamp.</a></p>
+		<script src="https://giscus.app/client.js"
+			data-repo="rcorex/nuttyb-config"
+			data-repo-id="R_kgDOPJlKyQ"
+			data-category="Announcements"
+			data-category-id="DIC_kwDOPJlKyc4CtRUV"
+			data-mapping="pathname"
+			data-strict="0"
+			data-reactions-enabled="0"
+			data-emit-metadata="0"
+			data-input-position="bottom"
+			data-theme="dark"
+			data-lang="en"
+			data-loading="lazy"
+			crossorigin="anonymous"
+			async>
+		</script>
         </div>
     </div>
 
