--- a/encoder-dev.html
+++ b/encoder-dev.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/luamin@1.0.4/luamin.min.js" defer></script>
 
     <!-- 3. Load lua-fmt for BEAUTIFYING -->
-    <script src="https://cdn.jsdelivr.net/npm/lua-fmt@2.1.1/dist/index.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/lua-fmt@2.6.0/dist/src/index.min.js" defer></script>
 
     <style>
         body {
