--- a/encoder-dev.html
+++ b/encoder-dev.html
@@ -9,7 +9,7 @@
     <script src="luamin.js" defer></script>
 
     <style>
-        /* CSS styles remain the same */
+        /* CSS styles have been adjusted below */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-color: #f0f2f5;
@@ -78,13 +78,25 @@
         }
         .copyBtn:hover:not(:disabled) { background-color: #5a6268; }
         .copyBtn:disabled { background-color: #b0b5ba; }
-        .status-label, .info-label {
+        
+        .status-label {
             display: block;
             text-align: center;
             margin: 15px 0 -10px 0;
             color: #888;
             font-style: italic;
             min-height: 1em;
+        }
+
+        /* --- MODIFIED RULE --- */
+        .info-label {
+            display: block;
+            text-align: center;
+            margin: 8px 0 0 0; /* Changed: Removed negative margin to prevent overlap */
+            color: #888;
+            font-style: italic;
+            min-height: 1em;
+            font-size: 12px; /* Changed: Made font size smaller */
         }
     </style>
 </head>
@@ -219,7 +231,7 @@
                 };
                 const minifiedCode = luaminp.Minify(originalCode, minifyOptions);
 
-                // --- NEW LOGIC TO PRESERVE COMMENTS ---
+                // --- LOGIC TO PRESERVE COMMENTS ---
                 const commentsToKeep = [];
                 const lines = originalCode.split('\n');
                 for (const line of lines) {
@@ -239,7 +251,6 @@
                 } else {
                     minifiedOutput.value = minifiedCode;
                 }
-                // --- END OF NEW LOGIC ---
 
             } catch (e) {
                 minifiedOutput.value = `Minify Error: ${e.message}`;
