--- a/encoder-dev.html
+++ b/encoder-dev.html
@@ -133,7 +133,7 @@
 
         <!-- Step 2: User Input & Beautify -->
         <div class="pipeline-step">
-            <label for="luaInput">2. Edit or Beautify Lua Code</label>
+            <label for="luaInput">2. Input Lua Code</label>
             <div class="output-container">
                 <textarea id="luaInput" spellcheck="false" placeholder="-- Your Lua code will appear here after decoding,
 -- or you can paste it directly."></textarea>
