--- a/encoder-dev.html
+++ b/encoder-dev.html
@@ -310,18 +310,24 @@
             return null;
         }
 
-        // *** REFACTORED: The handler now uses the simple and correct focus() method ***
+        // *** REFACTORED: The final, correct, and simple highlight/scroll logic ***
         function handleHighlightOffender() {
             const offendingBlock = findOffendingBlock(minifiedOutput.value);
 
             if (offendingBlock) {
-                // 1. Set the selection range on the textarea.
-                minifiedOutput.selectionStart = offendingBlock.index;
-                minifiedOutput.selectionEnd = offendingBlock.index + offendingBlock.length;
-
-                // 2. Call focus() on the element. The browser will automatically
-                //    scroll the current selection into the visible area.
+                // 1. Focus the textarea first. This is important.
                 minifiedOutput.focus();
+
+                // 2. Set the selection to a zero-width cursor at the start of the block.
+                minifiedOutput.setSelectionRange(offendingBlock.index, offendingBlock.index);
+
+                // 3. Dispatch a single, harmless keyboard event. This is the "nudge"
+                //    that triggers the browser's native scroll-to-caret logic.
+                const keyEvent = new KeyboardEvent('keydown', { key: ' ', code: 'Space', bubbles: true, cancelable: false });
+                minifiedOutput.dispatchEvent(keyEvent);
+                
+                // 4. AFTER the scroll has been triggered, set the final selection to highlight the full block.
+                minifiedOutput.setSelectionRange(offendingBlock.index, offendingBlock.index + offendingBlock.length);
 
             } else {
                 const originalText = highlightBtn.textContent;
